# clawproxy

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  openclaw.sample.json
.claude/: settings.json
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  SECURITY_ANALYSIS.md
src/: config.rs  error.rs  lib.rs
src/proxy/: mod.rs  router.rs  server.rs  substitution.rs
src/sandbox/: linux.rs  macos.rs  mod.rs
tasks/: TASKS.md
tasks/claude/: 1.2-setup-library-structure.md  2.1-implement-config-loading.md  3.1-define-sandbox-trait.md  3.3-implement-linux-sandbox.md  4.1-implement-router.md  4.3-implement-http-server.md  4.5-implement-response-streaming.md  5.1-implement-init.md  5.2-implement-secret-set.md  5.4-implement-secret-delete.md  5.5-implement-start.md  5.7-implement-configure-openclaw.md  6.1-unit-tests-config.md  6.2-unit-tests-router.md  6.4-integration-tests-proxy.md  6.6-end-to-end-tests.md  7.2-create-install-script.md  7.3-create-homebrew-formula.md  7.4-document-installation.md  8.1-write-readme.md  8.3-add-help-documentation.md
tasks/closed/: 1.1-initialize-cargo-workspace.md  1.3-setup-logging.md  2.2-implement-secrets-loading.md  3.2-implement-macos-sandbox.md  3.4-implement-launcher-binary.md  3.5-test-sandbox-effectiveness-macos.md  4.2-implement-token-substitution.md  4.4-implement-request-forwarding.md  4.6-implement-proxy-error-handling.md  5.1-implement-init.md  5.3-implement-secret-list.md
tasks/human/: 2.3-implement-config-validation.md  3.5-test-sandbox-effectiveness.md  3.6-test-sandbox-on-linux.md  (+6 more)
