[package]
name = "clawproxy"
version = "0.1.0"
edition = "2021"
description = "Secure credential injection system for AI agents"
license = "MIT"

[[bin]]
name = "clawproxy"
path = "src/bin/clawproxy.rs"

[[bin]]
name = "clawproxy-run"
path = "src/bin/clawproxy_run.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.7"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
dirs = "5"

# Sandboxing (Linux)
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.3"

# Process execution
nix = { version = "0.28", features = ["process", "signal"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
